Text changes. Dark mode logo. Button text color fix

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@
 
   /* Logo swap */
   #site-logo {
-    content: url('./images/Logo-dark-bg.png');
+    content: url('./images/Website Logo 1A1A1B.png');
   }
 
   /* Borders */
@@ -82,6 +82,10 @@
   }
   [class*="hover:shadow-[2px_2px"]:hover {
     box-shadow: 2px 2px 0px 0px rgba(225, 225, 225, 1) !important;
+  }
+
+  .ppg-about-btn {
+    color: #ffffff;
   }
 }
 
@@ -165,5 +169,9 @@
   }
   [class*="hover:shadow-[2px_2px"]:hover {
     box-shadow: 2px 2px 0px 0px rgba(0, 0, 0, 1) !important;
+  }
+
+  .ppg-about-btn {
+    color: #000000;
   }
 }
